Bug 454173 - "plasma_session closed unexpectedly" message on every logout
Summary: "plasma_session closed unexpectedly" message on every logout
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-crash (other bugs)
Version First Reported In: 5.25.1
Platform: Neon Linux
: NOR crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-05-21 17:04 UTC by Paul Worrall
Modified: 2022-06-28 19:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Journal dump from start of logout (30.72 KB, text/x-log)
2022-05-21 17:04 UTC, Paul Worrall
Details
journalctl output from start of login to end of logout (70.84 KB, text/plain)
2022-06-28 07:31 UTC, Paul Worrall
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2022-05-21 17:04:46 UTC
Created attachment 149087 [details]
Journal dump from start of logout

Using a fresh, default install of KDE neon testing edition with Plasma 5.25 beta. Probably not relevant but I selected "login automatically" during the install

STEPS TO REPRODUCE
1. Application Launcher => Logout
2. Confirm logout

OBSERVED RESULT
Logout proceeds but a message saying "Plasma closed unexpectedly" flashes up for a fraction of a second

SOFTWARE/OS VERSIONS
Operating System: KDE neon Testing Edition
KDE Plasma Version: 5.24.90
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.4
Kernel Version: 5.13.0-41-generic (64-bit)
Graphics Platform: X11
Processors: 2 × AMD A6-6400K APU with Radeon(tm) HD Graphics
Memory: 7.7 GiB of RAM
Graphics Processor: AMD CEDAR
Manufacturer: NOVATECH LTD
Product Name: BB-64004H
System Version: V1.0

ADDITIONAL INFORMATION
coredumpctl does not list any coredumps
output of journalctl from start of logout is attached
Comment 1 Nate Graham 2022-05-23 18:38:36 UTC
Looks suspicious:

> May 21 17:50:26 neon-testing startplasma-x11[3167]: org.kde.startup: Could not fully finish the process "/usr/bin/plasma_session"
> May 21 17:50:26 neon-testing startplasma-x11[3167]: QProcess: Destroyed while process ("/usr/bin/plasma_session") is still running.
> May 21 17:50:27 neon-testing sddm-helper[3162]: [PAM] Closing session

I wonder if this could have been caused by the fix for Bug 97716.
Comment 2 popov895 2022-05-23 21:07:37 UTC
Hmm, does KDE neon Testing Edition has the latest git version of the Plasma Workspace?
Comment 3 Bug Janitor Service 2022-05-24 11:47:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1763
Comment 4 popov895 2022-05-24 11:53:04 UTC
David Edmundson  was right, we have to wait for the killed process to finish. Sorry for that.
Comment 5 popov895 2022-05-24 15:01:09 UTC
Git commit 853c29bf7d6dae43379035ebd3837e07050e0ee2 by Eugene Popov.
Committed on 24/05/2022 at 11:45.
Pushed by ngraham into branch 'master'.

[startplasma] Wait for the killed process to finish

Because we need all processes to be killed before startplasma exits.

M  +3    -1    startkde/startplasma.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/853c29bf7d6dae43379035ebd3837e07050e0ee2
Comment 6 Nate Graham 2022-05-24 15:01:55 UTC
Git commit b7f4a7322fea03afcb71b909730cb8681ae32e78 by Nate Graham, on behalf of Eugene Popov.
Committed on 24/05/2022 at 15:01.
Pushed by ngraham into branch 'Plasma/5.25'.

[startplasma] Wait for the killed process to finish

Because we need all processes to be killed before startplasma exits.


(cherry picked from commit 853c29bf7d6dae43379035ebd3837e07050e0ee2)

M  +3    -1    startkde/startplasma.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/b7f4a7322fea03afcb71b909730cb8681ae32e78
Comment 7 Paul Worrall 2022-06-27 14:47:18 UTC
I'm now up to Plasma 5.25.1 and still getting this issue so reopening.

Tested on a new user account.

Operating System: KDE neon 5.25
KDE Plasma Version: 5.25.1
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.5
Kernel Version: 5.13.0-51-generic (64-bit)
Graphics Platform: X11
Processors: 2 × AMD A6-6400K APU with Radeon(tm) HD Graphics
Memory: 7.7 GiB of RAM
Graphics Processor: AMD CEDAR
Manufacturer: NOVATECH LTD
Product Name: BB-64004H
System Version: V1.0
Comment 8 popov895 2022-06-27 21:37:56 UTC
Can you attach output of journalctl again?
Comment 9 Paul Worrall 2022-06-28 07:31:33 UTC
Created attachment 150216 [details]
journalctl output from start of login to end of logout

Logout starts at 08:22
Comment 10 popov895 2022-06-28 09:00:44 UTC
Hmm, I don't see anything out of the ordinary. Are there any coredamps?
Comment 11 Paul Worrall 2022-06-28 18:48:40 UTC
No relevant coredumps.  

My PC now dual-boots Neon User and Neon Developer and the problem only happens in User so maybe the bug's been squashed or gone away somehow.
Comment 12 Paul Worrall 2022-06-28 19:26:41 UTC
Just updated User Edition to Plasma 5.25.2 and I no longer see the message, so marking as fixed.  Thanks for looking into it.