[startplasma] Wait for the killed process to finish

Because we need all processes to be killed before startplasma exits.

BUG: 454173