startkde/startplasma.cpp
@@ -75,8 +75,10 @@ void gentleTermination(QProcess *p)
 
     // Wait longer for a session than a greeter
     if (!p->waitForFinished(5000)) {
-        qCWarning(PLASMA_STARTUP) << "Could not fully finish the process" << p->program();
         p->kill();
+        if (!p->waitForFinished(5000)) {
+            qCWarning(PLASMA_STARTUP) << "Could not fully finish the process" << p->program();
+        }
     }
 }
 
